@@ -1,3 +1,4 @@
+ Tue Jan  5 2016 - add support for config variables. See 'man vitrc'
  Wed Sep 30 2015 - improve detection of annotations (VT-123)
  Sun Mar  8 2015 - do not beep on a 'g' keystroke
  Sat Mar  7 2015 - fix a bug where prompt text was invisible
